We can create object from XML